// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryInstructions renders with a custom value 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      These may be printed on your newspaper. Don’t add sensitive information like access codes. If you do so, it is at your own risk. To provide additional secure information, login to your account via FT.com.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
      foobar
    </textarea>
  </span>
  <p>
    Please note that we can only deliver to the ground floor level of your property.
  </p>
</label>
`;

exports[`DeliveryInstructions renders with a disabled input element 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      These may be printed on your newspaper. Don’t add sensitive information like access codes. If you do so, it is at your own risk. To provide additional secure information, login to your account via FT.com.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
              disabled
    >
    </textarea>
  </span>
  <p>
    Please note that we can only deliver to the ground floor level of your property.
  </p>
</label>
`;

exports[`DeliveryInstructions renders with an error 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      These may be printed on your newspaper. Don’t add sensitive information like access codes. If you do so, it is at your own risk. To provide additional secure information, login to your account via FT.com.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea o-forms-input--invalid">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
  <p>
    Please note that we can only deliver to the ground floor level of your property.
  </p>
</label>
`;

exports[`DeliveryInstructions renders with default props 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      These may be printed on your newspaper. Don’t add sensitive information like access codes. If you do so, it is at your own risk. To provide additional secure information, login to your account via FT.com.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
  <p>
    Please note that we can only deliver to the ground floor level of your property.
  </p>
</label>
`;

exports[`DeliveryInstructions renders with maxlength 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      These may be printed on your newspaper. Don’t add sensitive information like access codes. If you do so, it is at your own risk. To provide additional secure information, login to your account via FT.com.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              maxlength="200"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
  <p>
    Please note that we can only deliver to the ground floor level of your property.
  </p>
</label>
`;

exports[`DeliveryInstructions renders with rows 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      These may be printed on your newspaper. Don’t add sensitive information like access codes. If you do so, it is at your own risk. To provide additional secure information, login to your account via FT.com.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              rows="20"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
  <p>
    Please note that we can only deliver to the ground floor level of your property.
  </p>
</label>
`;
